# numba-oslo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/jax_oslo/: __init__.py
src/numba_oslo/: __init__.py  cli.py  model.py
