[project]
name = "numba-oslo"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "theorashid", email = "theoaorashid@gmail.com" }
]
dynamic = ["version", "description"]
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.1",
    "numba>=0.60.0",
    "polars>=1.12.0",
    "ruff>=0.7.2",
    "typer>=0.12.5",
    "vl-convert-python>=1.7.0",
]

[project.scripts]
oslo = "numba_oslo.cli:app"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
extend-include = ["*.ipynb"]
exclude = []
lint.ignore = ["F722", "F821"]
